# d3-viz

./: .gitignore  README.md  pyproject.toml
Vaccines/: data.csv  index.html  parse.py  plot.js
bridger/: all_pair_KLD.csv  clustering.py
cases_search/: deaths_smooth.json  index.html  output.txt  parse.py  plot.js  smooth.js  smoothparse.py  test.js
global_temp/: avg_high.py  index.html  visual.js
typing/: barchart.html  data.json  grid.html  line.html  test.html
women_parl/: index.html  parse.py  visual.js
word_emb/: extract.ipynb  extract.py
